--- a/messageservice.properties
+++ b/messageservice.properties
@@ -1,5 +1,1 @@
-spring.application.name = messageService
-spring.cloud.config.uri=http://localhost:9081
-spring.basic.enabled= false
-management.security.enabled = false
-eureka.client.serviceUrl.defaultZone =  http://localhost:8081/eureka
+message=This is not default
